Changes to already existing views and added map

--- a/Front-end-template/app/src/main/res/layout/fragment_active_orders.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_active_orders.xml
@@ -10,8 +10,8 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="22dp"
         android:fontFamily="@font/nunito_bold"
         android:text="10:40 EST"
         android:textColor="#555555"
@@ -34,8 +34,8 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="106dp"
         android:fontFamily="@font/nunito_bold"
         android:text="10:43 EST"
         android:textColor="#555555"
@@ -48,9 +48,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="77dp"
-        android:layout_marginLeft="77dp"
-        android:layout_marginTop="451dp"
+        android:layout_marginStart="79dp"
+        android:layout_marginLeft="79dp"
+        android:layout_marginTop="338dp"
         android:background="@drawable/circle_bg" />
 
     <TextView
@@ -59,8 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginLeft="132dp"
+        android:layout_marginTop="22dp"
         android:fontFamily="@font/nunito_bold"
         android:text="ORDER PLACED"
         android:textColor="#555555"
@@ -72,8 +72,8 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="87dp"
+        android:layout_marginLeft="132dp"
+        android:layout_marginTop="51dp"
         android:fontFamily="@font/nunito_bold"
         android:text="Your request has been sent."
         android:textColor="#555555"
@@ -85,9 +85,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="79dp"
-        android:layout_marginLeft="79dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginLeft="81dp"
+        android:layout_marginTop="19dp"
         android:background="@drawable/circle_bg" />
 
     <TextView
@@ -96,8 +96,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="106dp"
         android:fontFamily="@font/nunito_bold"
         android:text="ORDER ACCEPTED"
         android:textColor="#555555"
@@ -109,8 +109,8 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="189dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="139dp"
         android:fontFamily="@font/nunito_bold"
         android:text="Your order hass been accepted and your credit card has been charged."
         android:textColor="#555555"
@@ -122,24 +122,24 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="249dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="199dp"
         android:fontFamily="@font/nunito_bold"
         android:text="TIME OF PICKUP: 11:00 EST"
         android:textColor="#555555"
         android:textSize="13sp" />
 
     <TextView
-        android:id="@+id/heading_label8"
+        android:id="@+id/location"
         android:layout_width="184dp"
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="269dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="216dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="LOCATION: 256 McCaul St."
-        android:textColor="#555555"
+        android:text="@string/title_location"
+        android:textColor="@color/colorAccent"
         android:textSize="13sp" />
 
     <TextView
@@ -148,8 +148,8 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="9dp"
-        android:layout_marginTop="313dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="272dp"
         android:fontFamily="@font/nunito_bold"
         android:text="11:00 EST"
         android:textColor="#555555"
@@ -162,9 +162,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="78dp"
-        android:layout_marginLeft="78dp"
-        android:layout_marginTop="153dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="103dp"
         android:background="@drawable/circle_bg" />
 
     <TextView
@@ -173,8 +173,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="311dp"
+        android:layout_marginLeft="132dp"
+        android:layout_marginTop="273dp"
         android:fontFamily="@font/nunito_bold"
         android:text="READY FOR PICKUP"
         android:textColor="#555555"
@@ -188,9 +188,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="77dp"
-        android:layout_marginLeft="77dp"
-        android:layout_marginTop="310dp"
+        android:layout_marginStart="79dp"
+        android:layout_marginLeft="79dp"
+        android:layout_marginTop="271dp"
         android:background="@drawable/circle_bg" />
 
     <TextView
@@ -199,8 +199,8 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/heading_label10"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="143dp"
+        android:layout_marginLeft="132dp"
+        android:layout_marginTop="65dp"
         android:fontFamily="@font/nunito_bold"
         android:text="ORDER PICKED UP"
         android:textColor="#555555"
@@ -213,14 +213,60 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="9dp"
-        android:layout_marginTop="454dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="338dp"
         android:fontFamily="@font/nunito_bold"
         android:text="11:01 EST"
         android:textColor="#555555"
         android:textSize="12sp" />
 
 
+    <View
+        android:id="@+id/myRectangleView"
+        android:layout_width="match_parent"
+        android:layout_height="92dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="419dp"
+        android:background="@drawable/rectangle" />
 
+    <View
+        android:layout_width="43dp"
+        android:layout_height="43dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="434dp"
+        android:background="@drawable/profile_pic" />
+
+
+    <TextView
+        android:id="@+id/food_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/heading_label10"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="91dp"
+        android:layout_marginTop="177dp"
+        android:fontFamily="@font/nunito_bold"
+        android:text="FRIED RICE"
+        android:textColor="#ffffff"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/chef_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/heading_label10"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="93dp"
+        android:layout_marginTop="160dp"
+        android:fontFamily="@font/nunito_bold"
+        android:text="YOUR CHEF: HOWIE ZHANG"
+        android:textColor="#ffffff"
+        android:textSize="10sp" />
 
 </RelativeLayout>
