--- a/Front-end-template/app/src/main/res/layout/fragment_food_near_me.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_food_near_me.xml
@@ -5,7 +5,7 @@
     android:id="@+id/searchFood"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FoodNearMeFragment">
+    tools:context=".FoodListingNearMe">
 
     <!-- TODO: Update blank fragment layout -->
 
