--- a/Front-end-template/app/src/main/res/layout/menu_item.xml
+++ b/Front-end-template/app/src/main/res/layout/menu_item.xml
@@ -10,18 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--android:src="@drawable/rice"-->
         <ImageView
             android:id="@+id/food_image"
             android:scaleType="centerCrop"
-            android:src="@drawable/rice"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <!--android:text="Whitest Rice"-->
+
         <TextView
             android:id="@+id/food_name"
-            android:text="Whitest Rice"
-            android:textColor="@android:color/black"
             android:background="@color/colorAccent"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
             android:gravity="center"
             android:layout_width="match_parent"
