--- a/Front-end-template/app/src/main/res/layout/fragment_search.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_search.xml
@@ -30,6 +30,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
+    <!--input type used to be textPersonName-->
     <EditText
         android:id="@+id/search_field"
         android:layout_width="275dp"
@@ -45,7 +46,7 @@
         android:ems="10"
         android:fontFamily="@font/nunito_semibold"
         android:hint="  Use current location"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
@@ -87,7 +88,6 @@
         android:id="@+id/search_field2"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
-
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -115,8 +115,9 @@
         app:layout_constraintVertical_bias="0.213" />
 
 
+    <!--this used to say angry_btn-->
     <Button
-        android:id="@+id/angry_btn"
+        android:id="@+id/search_button"
         android:layout_width="219dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="134dp"
@@ -163,7 +164,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/angry_btn"
+        app:layout_constraintTop_toBottomOf="@+id/search_button"
         app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
