--- a/Front-end-template/app/src/main/res/layout/fragment_active_orders.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_active_orders.xml
@@ -28,8 +28,9 @@
         android:layout_width="1dp"
         android:layout_height="fill_parent"
         android:background="#FF0000FF"
-        tools:layout_editor_absoluteX="93dp"
-        tools:layout_editor_absoluteY="8dp" />
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        tools:layout_editor_absoluteY="0dp" />
 
     <!-- the circular icon on the left -->
 
@@ -60,7 +61,7 @@
         android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view5"
-        app:layout_constraintVertical_bias="0.79"
+        app:layout_constraintVertical_bias="0.82"
         tools:layout_editor_absoluteX="77dp" />
 
     <TextView
@@ -110,7 +111,7 @@
         android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.100000024"
+        app:layout_constraintVertical_bias="0.07999998"
         tools:layout_editor_absoluteX="79dp" />
 
     <TextView
@@ -174,6 +175,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:fontFamily="@font/nunito_bold"
@@ -183,7 +185,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/view2"
-        tools:layout_editor_absoluteY="276dp" />
+        app:layout_constraintTop_toBottomOf="@+id/heading_label7" />
 
 
     <TextView
@@ -213,7 +215,7 @@
         android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view5"
-        app:layout_constraintVertical_bias="0.26"
+        app:layout_constraintVertical_bias="0.24000001"
         tools:layout_editor_absoluteX="78dp" />
 
     <TextView
@@ -243,7 +245,7 @@
         android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="@+id/view5"
         app:layout_constraintTop_toTopOf="@+id/view5"
-        app:layout_constraintVertical_bias="0.6"
+        app:layout_constraintVertical_bias="0.73"
         tools:layout_editor_absoluteX="77dp" />
 
     <TextView
