--- a/Front-end-template/app/src/main/res/layout/fragment_active_orders.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_active_orders.xml
@@ -9,17 +9,13 @@
         android:id="@+id/heading_label11"
         android:layout_width="62dp"
         android:layout_height="18dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:fontFamily="@font/nunito_bold"
         android:text="10:40 EST"
         android:textColor="#555555"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/view4"
-        app:layout_constraintEnd_toStartOf="@+id/view4"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view4" />
 
@@ -29,8 +25,9 @@
         android:layout_height="fill_parent"
         android:background="#FF0000FF"
         app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="@+id/view"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="16dp" />
 
     <!-- the circular icon on the left -->
 
@@ -38,17 +35,13 @@
         android:id="@+id/heading_label9"
         android:layout_width="62dp"
         android:layout_height="18dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:fontFamily="@font/nunito_bold"
         android:text="10:43 EST"
         android:textColor="#555555"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toStartOf="@+id/view"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
@@ -60,9 +53,10 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view5"
+        app:layout_constraintStart_toStartOf="@+id/view5"
         app:layout_constraintTop_toTopOf="@+id/view5"
-        app:layout_constraintVertical_bias="0.82"
-        tools:layout_editor_absoluteX="77dp" />
+        app:layout_constraintVertical_bias="0.82" />
 
     <TextView
         android:id="@+id/heading_label4"
@@ -70,6 +64,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:fontFamily="@font/nunito_bold"
@@ -80,7 +75,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/view4"
-        app:layout_constraintTop_toTopOf="@+id/view4" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.98" />
 
     <TextView
         android:id="@+id/heading_label16"
@@ -110,9 +106,10 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view5"
+        app:layout_constraintStart_toStartOf="@+id/view5"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.07999998"
-        tools:layout_editor_absoluteX="79dp" />
+        app:layout_constraintVertical_bias="0.07999998" />
 
     <TextView
         android:id="@+id/heading_label5"
@@ -146,11 +143,12 @@
         android:text="Your order hass been accepted and your credit card has been charged."
         android:textColor="#555555"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/heading_label7"
+        app:layout_constraintBottom_toTopOf="@+id/heading_label10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/heading_label5" />
+        app:layout_constraintTop_toBottomOf="@+id/heading_label5"
+        app:layout_constraintVertical_bias="0.075" />
 
     <TextView
         android:id="@+id/heading_label7"
@@ -158,6 +156,7 @@
         android:layout_height="21dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:fontFamily="@font/nunito_bold"
@@ -167,7 +166,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/view2"
-        tools:layout_editor_absoluteY="251dp" />
+        app:layout_constraintTop_toBottomOf="@+id/heading_label6" />
 
     <TextView
         android:id="@+id/location"
@@ -178,45 +177,51 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/nunito_bold"
         android:text="@string/title_location"
         android:textColor="@color/colorAccent"
         android:textSize="13sp"
+        app:layout_constraintBottom_toTopOf="@+id/heading_label10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/heading_label7" />
+        app:layout_constraintTop_toBottomOf="@+id/heading_label7"
+        app:layout_constraintVertical_bias="0.009" />
 
 
     <TextView
         android:id="@+id/heading_label12"
         android:layout_width="62dp"
         android:layout_height="18dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:fontFamily="@font/nunito_bold"
         android:text="11:00 EST"
         android:textColor="#555555"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintEnd_toStartOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view2" />
+        app:layout_constraintTop_toTopOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.52" />
 
     <View
         android:id="@+id/view"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view5"
-        app:layout_constraintVertical_bias="0.24000001"
-        tools:layout_editor_absoluteX="78dp" />
+        app:layout_constraintVertical_bias="0.244" />
 
     <TextView
         android:id="@+id/heading_label10"
@@ -244,9 +249,10 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="@+id/view5"
+        app:layout_constraintEnd_toEndOf="@+id/view5"
+        app:layout_constraintStart_toStartOf="@+id/view5"
         app:layout_constraintTop_toTopOf="@+id/view5"
-        app:layout_constraintVertical_bias="0.73"
-        tools:layout_editor_absoluteX="77dp" />
+        app:layout_constraintVertical_bias="0.73" />
 
     <TextView
         android:id="@+id/heading_label13"
@@ -271,17 +277,13 @@
         android:id="@+id/heading_label14"
         android:layout_width="62dp"
         android:layout_height="18dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:fontFamily="@font/nunito_bold"
         android:text="11:01 EST"
         android:textColor="#555555"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
-        app:layout_constraintEnd_toStartOf="@+id/view3"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view3" />
 
