--- a/Front-end-template/app/src/main/res/layout/fragment_show_listings.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_show_listings.xml
@@ -26,6 +26,10 @@
         android:id="@+id/lstFoodList"
         android:layout_width="match_parent"
         android:layout_height="635dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginRight="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
