Complete functionality of order tracking with dynamic refresh for first sprint of d3

--- a/Front-end-template/app/src/main/res/layout/fragment_food_detail.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_food_detail.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/food_details">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -85,7 +86,7 @@
                     >
 
                     <TextView
-                        android:id="@id/food_name"
+                        android:id="@id/food_description"
                         android:layout_marginTop="8dp"
                         android:padding="12dp"
                         android:textColor="@color/colorPrimaryDark"
