--- a/Front-end-template/app/src/main/res/layout-v21/fragment_food_detail.xml
+++ b/Front-end-template/app/src/main/res/layout-v21/fragment_food_detail.xml
@@ -87,7 +87,7 @@
                     >
 
                     <TextView
-                        android:id="@id/food_name"
+                        android:id="@id/food_description"
                         android:layout_marginTop="8dp"
                         android:padding="12dp"
                         android:text="Food Name"
