--- a/Front-end-template/app/src/main/res/layout/fragment_active.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_active.xml
@@ -2,28 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/searchFood"
+    android:id="@+id/allActiveOrders"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ShowListings">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <SearchView
-        android:id="@+id/searchBar"
-        android:layout_width="371dp"
-        android:layout_height="35dp"
-        android:hint="@string/search_hint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
     <!-- 401dp width 551dp height-->
     <ListView
-        android:id="@+id/lstFoodList"
+        android:id="@+id/listOrders"
         android:layout_width="match_parent"
         android:layout_height="635dp"
         android:layout_marginStart="3dp"
@@ -32,8 +21,7 @@
         android:layout_marginRight="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
