--- a/Front-end-template/app/src/main/res/layout/fragment_order_tracking1.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_order_tracking1.xml
@@ -1,57 +1,58 @@
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <TextView
-        android:id="@+id/heading_label11"
+        android:id="@+id/placed_time"
         android:layout_width="62dp"
         android:layout_height="18dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="10:40 EST"
         android:textColor="#555555"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view4"
+        app:layout_constraintBottom_toBottomOf="@+id/order_placed_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view4" />
+        app:layout_constraintTop_toTopOf="@+id/order_placed_icon" />
 
     <View
         android:id="@+id/view5"
         android:layout_width="1dp"
         android:layout_height="fill_parent"
         android:background="#FF0000FF"
-        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="@+id/order_accepted_icon"
         app:layout_constraintHorizontal_bias="0.517"
-        app:layout_constraintStart_toStartOf="@+id/view"
+        app:layout_constraintStart_toStartOf="@+id/order_accepted_icon"
         tools:layout_editor_absoluteY="16dp" />
 
     <!-- the circular icon on the left -->
 
     <TextView
-        android:id="@+id/heading_label9"
+        android:id="@+id/accepted_time"
         android:layout_width="62dp"
         android:layout_height="18dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="10:43 EST"
         android:textColor="#555555"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintBottom_toBottomOf="@+id/order_accepted_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
+        app:layout_constraintTop_toTopOf="@+id/order_accepted_icon" />
 
     <View
-        android:id="@+id/view3"
+        android:id="@+id/order_completed_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view5"
         app:layout_constraintStart_toStartOf="@+id/view5"
@@ -59,7 +60,7 @@
         app:layout_constraintVertical_bias="0.82" />
 
     <TextView
-        android:id="@+id/heading_label4"
+        android:id="@+id/order_placed"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
@@ -68,18 +69,17 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="ORDER PLACED"
         android:textColor="#555555"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view4"
+        app:layout_constraintBottom_toBottomOf="@+id/order_placed_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/view4"
+        app:layout_constraintStart_toEndOf="@+id/order_placed_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.98" />
 
     <TextView
-        android:id="@+id/heading_label16"
+        android:id="@+id/order_place_message"
         android:layout_width="184dp"
         android:layout_height="41dp"
         android:layout_marginStart="8dp"
@@ -89,22 +89,20 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="Your request has been sent."
         android:textColor="#555555"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/heading_label5"
+        app:layout_constraintBottom_toTopOf="@+id/order_accepted"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/view4"
-        app:layout_constraintTop_toBottomOf="@+id/heading_label4" />
+        app:layout_constraintStart_toEndOf="@+id/order_placed_icon"
+        app:layout_constraintTop_toBottomOf="@+id/order_placed" />
 
     <View
-        android:id="@+id/view4"
+        android:id="@+id/order_placed_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view5"
         app:layout_constraintStart_toStartOf="@+id/view5"
@@ -112,7 +110,7 @@
         app:layout_constraintVertical_bias="0.07999998" />
 
     <TextView
-        android:id="@+id/heading_label5"
+        android:id="@+id/order_accepted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -120,17 +118,16 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="ORDER ACCEPTED"
         android:textColor="#555555"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintBottom_toBottomOf="@+id/order_accepted_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/view"
-        app:layout_constraintTop_toTopOf="@+id/view" />
+        app:layout_constraintStart_toEndOf="@+id/order_accepted_icon"
+        app:layout_constraintTop_toTopOf="@+id/order_accepted_icon" />
 
     <TextView
-        android:id="@+id/heading_label6"
+        android:id="@+id/order_accepted_message"
         android:layout_width="183dp"
         android:layout_height="54dp"
         android:layout_marginStart="8dp"
@@ -140,18 +137,17 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="Your order hass been accepted and your credit card has been charged."
         android:textColor="#555555"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/heading_label10"
+        app:layout_constraintBottom_toTopOf="@+id/ready_for_pickup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/heading_label5"
+        app:layout_constraintStart_toEndOf="@+id/ready_for_pickup_icon"
+        app:layout_constraintTop_toBottomOf="@+id/order_accepted"
         app:layout_constraintVertical_bias="0.075" />
 
     <TextView
-        android:id="@+id/heading_label7"
+        android:id="@+id/time_of_pickup"
         android:layout_width="243dp"
         android:layout_height="21dp"
         android:layout_marginStart="8dp"
@@ -160,13 +156,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="TIME OF PICKUP: 11:00 EST"
         android:textColor="#555555"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/heading_label6" />
+        app:layout_constraintStart_toEndOf="@+id/ready_for_pickup_icon"
+        app:layout_constraintTop_toBottomOf="@+id/order_accepted_message" />
 
     <TextView
         android:id="@+id/location"
@@ -179,34 +174,32 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="@string/title_location"
         android:textColor="@color/colorAccent"
         android:textSize="13sp"
-        app:layout_constraintBottom_toTopOf="@+id/heading_label10"
+        app:layout_constraintBottom_toTopOf="@+id/ready_for_pickup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/heading_label7"
+        app:layout_constraintStart_toEndOf="@+id/ready_for_pickup_icon"
+        app:layout_constraintTop_toBottomOf="@+id/time_of_pickup"
         app:layout_constraintVertical_bias="0.009" />
 
 
     <TextView
-        android:id="@+id/heading_label12"
+        android:id="@+id/delivery_time"
         android:layout_width="62dp"
         android:layout_height="18dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="11:00 EST"
         android:textColor="#555555"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        app:layout_constraintBottom_toBottomOf="@+id/ready_for_pickup_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view2"
+        app:layout_constraintTop_toTopOf="@+id/ready_for_pickup_icon"
         app:layout_constraintVertical_bias="0.52" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/order_accepted_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="8dp"
@@ -215,7 +208,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
@@ -224,7 +216,7 @@
         app:layout_constraintVertical_bias="0.244" />
 
     <TextView
-        android:id="@+id/heading_label10"
+        android:id="@+id/ready_for_pickup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -232,22 +224,20 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="READY FOR PICKUP"
         android:textColor="#555555"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        app:layout_constraintBottom_toBottomOf="@+id/ready_for_pickup_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/view2"
-        app:layout_constraintTop_toTopOf="@+id/view2" />
+        app:layout_constraintStart_toEndOf="@+id/ready_for_pickup_icon"
+        app:layout_constraintTop_toTopOf="@+id/ready_for_pickup_icon" />
 
 
     <View
-        android:id="@+id/view2"
+        android:id="@+id/ready_for_pickup_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/circle_bg"
         app:layout_constraintBottom_toBottomOf="@+id/view5"
         app:layout_constraintEnd_toEndOf="@+id/view5"
         app:layout_constraintStart_toStartOf="@+id/view5"
@@ -255,7 +245,7 @@
         app:layout_constraintVertical_bias="0.73" />
 
     <TextView
-        android:id="@+id/heading_label13"
+        android:id="@+id/order_pickedup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -263,29 +253,28 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="ORDER PICKED UP"
         android:textColor="#555555"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view3"
+        app:layout_constraintBottom_toBottomOf="@+id/order_completed_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/view3"
-        app:layout_constraintTop_toTopOf="@+id/view3" />
+        app:layout_constraintStart_toEndOf="@+id/order_completed_icon"
+        app:layout_constraintTop_toTopOf="@+id/order_completed_icon" />
 
 
     <TextView
-        android:id="@+id/heading_label14"
+        android:id="@+id/pickup_time"
         android:layout_width="62dp"
         android:layout_height="18dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="11:01 EST"
         android:textColor="#555555"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view3"
+        app:layout_constraintBottom_toBottomOf="@+id/order_completed_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view3" />
+        app:layout_constraintTop_toTopOf="@+id/order_completed_icon" />
 
 
 </android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
