--- a/Front-end-template/app/src/main/res/layout/menu_item.xml
+++ b/Front-end-template/app/src/main/res/layout/menu_item.xml
@@ -8,7 +8,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <!--android:src="@drawable/rice"-->
         <ImageView
@@ -20,14 +21,28 @@
         <!--android:text="Whitest Rice"-->
 
         <TextView
-            android:id="@+id/food_name"
+            android:id="@+id/food_description"
             android:background="@color/colorAccent"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/nunito_semibold"
+            android:textSize="18sp"
+            android:gravity="start"
             android:layout_width="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/food_location"
+            android:background="@color/colorAccent"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/nunito_semibold"
+            android:textSize="16sp"
+            android:gravity="start"
+            android:layout_below="@id/food_description"
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_height="wrap_content" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
